# fetchr

./: Cargo.toml  LICENSE  README.md  build.rs
src/: cli.rs  main.rs
