[package]
name = "fetchr"
version = "0.1.3"
edition = "2024"
license = "MIT"
description = "A versatile Rust CLI tool for making HTTP requests"
repository = "https://github.com/jim-ec/fetchr"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["cookies"] }
cookie = "0.18"
tokio = { version = "1.48", features = ["full"] }
colored = "3.0"
serde_json = "1.0"
serde_json5 = "0.2"
