[package]
name = "fetchr"
version = "0.2.3"
edition = "2024"
license = "MIT"
description = "A simple CLI tool to make HTTP requests"
repository = "https://github.com/jim-ec/fetchr"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive", "color"] }
reqwest = { version = "0.12", features = ["blocking", "cookies", "multipart"] }
cookie = "0.18"
colored = "3.0"
serde_json = "1.0"
serde_json5 = "0.2"
base64 = "0.22"
rpassword = "7.4"
